samples/_failures_safe/1761310412_5c8491_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72713c6a.c: In function ‘main’:
./samples/SAFE/__tmp_72713c6a.c:150:5: error: expected declaration or statement at end of input
  150 |     printf("Number of blocks: %zu\n", ctx.block_count);
      |     ^~~~~~
